# src/controller/UserController.ts
@@ -1,6 +1,9 @@
 import { Request, Response } from "express";
 import { GenerateTokenProvider } from "../shared/provider/GenerateTokenProvider";
+import PasswordValidator from "password-validator";
 import { UserService } from "../service/UserService";
+import { hash, compare } from "bcrypt";
+import AppError from "../shared/errors/AppErrors";
 
 class UserController {
    async authenticate(
@@ -9,16 +12,43 @@ class UserController {
    ): Promise<Response> {
       const { email, password } = request.body;
 
+      const schema = new PasswordValidator();
+      schema
+         .is()
+         .min(8)
+         .is()
+         .max(100)
+         .has()
+         .uppercase()
+         .has()
+         .lowercase()
+         .has()
+         .digits(2)
+         .has()
+         .not()
+         .spaces()
+         .is()
+         .not()
+         .oneOf(["Passw0rd", "Password123", "1234568"]);
+      if (schema.validate(password)) {
+         throw new AppError("Email or password incorrect", 401);
+      }
+
       const userService = new UserService();
 
       const user = await userService.findEmail(email);
+
+      const passwordMatch = await compare(password, user.password);
+      if (!passwordMatch) {
+         throw new AppError("Email or password incorrect", 401);
+      }
 
       const generateTokenProvider = new GenerateTokenProvider();
       const token = await generateTokenProvider.execute("");
 
       const tokenReturn = {
          token,
-         user: { name: user },
+         user: { name: user.name },
       };
 
       return response.status(200).json(tokenReturn);
@@ -34,12 +64,41 @@ class UserController {
    ): Promise<Response> {
       const { name, email, password } = request.body;
 
+      const schema = new PasswordValidator();
+      schema
+         .is()
+         .min(8)
+         .is()
+         .max(100)
+         .has()
+         .uppercase()
+         .has()
+         .lowercase()
+         .has()
+         .digits(2)
+         .has()
+         .not()
+         .spaces()
+         .is()
+         .not()
+         .oneOf(["Passw0rd", "Password123", "1234568"]);
+      if (schema.validate(password)) {
+         throw new AppError("Email or password incorrect", 401);
+      }
+
       const createUser = new UserService();
+
+      const verifyEmail = await createUser.findEmail(email);
+      if (verifyEmail) {
+         throw new AppError("Email already exists", 401);
+      }
+
+      const passwordHash = await hash(password, 8);
 
       const user = await createUser.create({
          name,
          email,
-         password,
+         password: passwordHash,
       });
 
       return response.status(201).json(user);
@@ -50,19 +109,14 @@ class UserController {
 
       const deleteUser = new UserService();
 
+      const userExists = await deleteUser.findById(id);
+      if (!userExists) {
+         throw new AppError("User not found", 401);
+      }
+
       const user = await deleteUser.delete({ id });
 
       return response.status(201).json(user);
-   }
-
-   async findById(request: Request, response: Response): Promise<Response> {
-      const { user_id } = request.params;
-
-      const findId = new UserService();
-
-      const user = await findId.findById(user_id);
-
-      return response.status(200).json(user);
    }
 
    async find(request: Request, response: Response): Promise<Response> {
@@ -89,9 +143,51 @@ class UserController {
       const updateUser = new UserService();
 
       const user = await updateUser.update({
+         id,
          name,
          email,
          password,
+      });
+
+      return response.status(201).json(user);
+   }
+
+   async updatePassword(
+      request: Request<any, any, { password: string }>,
+      response: Response
+   ): Promise<Response> {
+      const { password } = request.body;
+      const { id } = request.user;
+
+      const schema = new PasswordValidator();
+      schema
+         .is()
+         .min(8)
+         .is()
+         .max(100)
+         .has()
+         .uppercase()
+         .has()
+         .lowercase()
+         .has()
+         .digits(2)
+         .has()
+         .not()
+         .spaces()
+         .is()
+         .not()
+         .oneOf(["Passw0rd", "Password123", "1234568"]);
+      if (schema.validate(password)) {
+         throw new AppError("Email or password incorrect", 401);
+      }
+
+      const updatePassword = new UserService();
+
+      const passwordHash = await hash(password, 8);
+
+      const user = await updatePassword.updatePassword({
+         id,
+         password: passwordHash,
       });
 
       return response.status(201).json(user);
