# src/routes/movie.routes.ts
@@ -7,16 +7,15 @@ const movieRoutes = Router();
 
 const movieController = new MovieController();
 
-movieRoutes.use(ensureAuthenticate);
-
 movieRoutes.post(
-   "/movie",
+   "/create",
+   ensureAuthenticate,
    celebrate(
       {
          [Segments.BODY]: Joi.object().keys({
-            name: Joi.string().required(),
-            type: Joi.string()
-               .valid("ACAO", "COMEDIA", "LUTA", "DRAMA", "TERROR", "SUSPENSE")
+            title: Joi.string().required(),
+            movie_type: Joi.string()
+               .valid("SERIES", "MOVIE", "DOCUMENTARY")
                .required(),
             descriprion: Joi.string().required(),
          }),
@@ -28,15 +27,33 @@ movieRoutes.post(
    movieController.create
 );
 
+movieRoutes.get(
+   "/:movie_id",
+   celebrate(
+      {
+         [Segments.PARAMS]: Joi.object().keys({
+            movie_id: Joi.string().required(),
+         }),
+      },
+      {
+         allowUnknown: false,
+      }
+   ),
+   movieController.findById
+);
+
+movieRoutes.get("/", movieController.findAll);
+
 movieRoutes.put(
-   "/",
+   "/update",
+   ensureAuthenticate,
    celebrate(
       {
          [Segments.BODY]: Joi.object().keys({
             id: Joi.string().required(),
-            name: Joi.string().required(),
-            type: Joi.string()
-               .valid("ACAO", "COMEDIA", "LUTA", "DRAMA", "TERROR", "SUSPENSE")
+            title: Joi.string().required(),
+            movie_type: Joi.string()
+               .valid("SERIES", "MOVIE", "DOCUMENTARY")
                .required(),
             descriprion: Joi.string().required(),
          }),
